--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neomorphism</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
+    <title>Loader</title>
 </head>
 <body>
-    <div class="screen-container">
-        <div id="toggle">
-            <div id="switch-area">
-                <div class="circle"></div>
-            </div>
+    <div id="loader1">
+        <div id="slider1"></div>
+    </div>
+    <div id="loader2">
+        <div id="slider2"></div>
+    </div>
+    <div id="loader3">
+        <div class=square id="one"></div>
+        <div class=square id="two"></div>
+        <div class=square id="three"></div>
+        <div class=square id="four"></div>
+        <div class=square id="five"></div>
+        <div class=square id="six"></div>
+        <div class=square id="seven"></div>
+        <div class=square id="eight"></div>
+        <div class=square id="nine"></div>
+        <div class=square id="ten"></div>
+    </div>
+    <div id="switch">
+        <div id="switcharea">
+            <div id="toggle"></div>
         </div>
     </div>
 </body>
